Bug #27758 Restoring NDB backups makes table usable in SQL nodes - parse indexname using "split" instead of sscanf, as not to break at space - test case with space in key - enclose names in printout